- Fixes MSPDTI-20, MSPDTI-22, MSPDTI-35, MSPDTI-36. - Replaced hardcoding with Spring file based configuration (only LDAP data sources, for now). - Implemented directory Spring service for handling HPD Plus transactions. - Implemented abstract directory data layer to allow for multiple types of data Spring services, each with multiple, Spring-configured data sources. - Added JAXB binding files for the DSML and HPD Plus schemas (disabled, for now).